tests/fixtures/invalid/dict_rshift_int.py
# Cannot right shift Dict[str, int] and Int
x: dict[str, int] = {"a": 1} >> 1
